--- a/src/gui/form/mappingWindow.ui
+++ b/src/gui/form/mappingWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>684</width>
-    <height>512</height>
+    <width>750</width>
+    <height>530</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>370</y>
+      <y>400</y>
       <width>130</width>
       <height>32</height>
      </rect>
@@ -27,11 +27,11 @@
      <string>Mapping </string>
     </property>
    </widget>
-   <widget class="QPushButton" name="veiw_table_3">
+   <widget class="QPushButton" name="view_table_2">
     <property name="geometry">
      <rect>
       <x>500</x>
-      <y>320</y>
+      <y>340</y>
       <width>112</width>
       <height>32</height>
      </rect>
@@ -40,11 +40,11 @@
      <string>View table </string>
     </property>
    </widget>
-   <widget class="QPushButton" name="veiw_table_2">
+   <widget class="QPushButton" name="view_table_1">
     <property name="geometry">
      <rect>
       <x>500</x>
-      <y>270</y>
+      <y>280</y>
       <width>112</width>
       <height>32</height>
      </rect>
@@ -57,7 +57,7 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>260</y>
+      <y>272</y>
       <width>200</width>
       <height>50</height>
      </rect>
@@ -70,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>320</y>
+      <y>340</y>
       <width>130</width>
       <height>32</height>
      </rect>
@@ -83,7 +83,7 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>360</y>
+      <y>392</y>
       <width>200</width>
       <height>50</height>
      </rect>
@@ -92,11 +92,11 @@
      <number>24</number>
     </property>
    </widget>
-   <widget class="QPushButton" name="veiw_table_4">
+   <widget class="QPushButton" name="view_table_3">
     <property name="geometry">
      <rect>
       <x>500</x>
-      <y>370</y>
+      <y>400</y>
       <width>112</width>
       <height>32</height>
      </rect>
@@ -109,7 +109,7 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>310</y>
+      <y>332</y>
       <width>200</width>
       <height>50</height>
      </rect>
@@ -122,7 +122,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>270</y>
+      <y>280</y>
       <width>130</width>
       <height>32</height>
      </rect>
@@ -135,9 +135,9 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>205</y>
-      <width>110</width>
-      <height>40</height>
+      <y>210</y>
+      <width>112</width>
+      <height>32</height>
      </rect>
     </property>
     <property name="text">
@@ -148,19 +148,19 @@
     <property name="geometry">
      <rect>
       <x>25</x>
-      <y>13</y>
-      <width>140</width>
-      <height>45</height>
+      <y>20</y>
+      <width>138</width>
+      <height>35</height>
      </rect>
     </property>
     <property name="text">
      <string>View table name</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="veiw_table_1">
+   <widget class="QPushButton" name="view_table_0">
     <property name="geometry">
      <rect>
-      <x>425</x>
+      <x>420</x>
       <y>210</y>
       <width>112</width>
       <height>32</height>
@@ -184,7 +184,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>270</y>
+      <y>280</y>
       <width>130</width>
       <height>32</height>
      </rect>
@@ -197,7 +197,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>320</y>
+      <y>340</y>
       <width>130</width>
       <height>32</height>
      </rect>
@@ -210,7 +210,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>370</y>
+      <y>400</y>
       <width>130</width>
       <height>32</height>
      </rect>
@@ -219,13 +219,65 @@
      <string>Stop</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="save_1">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>280</y>
+      <width>112</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="save_2">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>340</y>
+      <width>112</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="save_0">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>210</y>
+      <width>112</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="save_3">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>400</y>
+      <width>112</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>684</width>
+     <width>750</width>
      <height>24</height>
     </rect>
    </property>
