--- a/src/gui/form/mappingWindow.ui
+++ b/src/gui/form/mappingWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>750</width>
-    <height>530</height>
+    <width>780</width>
+    <height>560</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <widget class="QPushButton" name="mapping">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>380</x>
       <y>400</y>
       <width>130</width>
       <height>32</height>
@@ -30,7 +30,7 @@
    <widget class="QPushButton" name="view_table_2">
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>510</x>
       <y>340</y>
       <width>112</width>
       <height>32</height>
@@ -43,7 +43,7 @@
    <widget class="QPushButton" name="view_table_1">
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>510</x>
       <y>280</y>
       <width>112</width>
       <height>32</height>
@@ -56,20 +56,20 @@
    <widget class="QProgressBar" name="pbar_2">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>300</x>
       <y>272</y>
       <width>200</width>
       <height>50</height>
      </rect>
     </property>
     <property name="value">
-     <number>24</number>
+     <number>0</number>
     </property>
    </widget>
    <widget class="QPushButton" name="compare">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>30</x>
       <y>340</y>
       <width>130</width>
       <height>32</height>
@@ -79,23 +79,10 @@
      <string>Compare </string>
     </property>
    </widget>
-   <widget class="QProgressBar" name="pbar_4">
-    <property name="geometry">
-     <rect>
-      <x>290</x>
-      <y>392</y>
-      <width>200</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="value">
-     <number>24</number>
-    </property>
-   </widget>
    <widget class="QPushButton" name="view_table_3">
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>510</x>
       <y>400</y>
       <width>112</width>
       <height>32</height>
@@ -108,20 +95,26 @@
    <widget class="QProgressBar" name="pbar_3">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>300</x>
       <y>332</y>
       <width>200</width>
       <height>50</height>
      </rect>
     </property>
     <property name="value">
-     <number>24</number>
+     <number>0</number>
+    </property>
+    <property name="textVisible">
+     <bool>true</bool>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
     </property>
    </widget>
    <widget class="QPushButton" name="preprocess">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>30</x>
       <y>280</y>
       <width>130</width>
       <height>32</height>
@@ -134,8 +127,8 @@
    <widget class="QPushButton" name="get_table">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>210</y>
+      <x>210</x>
+      <y>230</y>
       <width>112</width>
       <height>32</height>
      </rect>
@@ -147,21 +140,30 @@
    <widget class="QPushButton" name="view_table_name">
     <property name="geometry">
      <rect>
-      <x>25</x>
+      <x>210</x>
       <y>20</y>
       <width>138</width>
-      <height>35</height>
+      <height>32</height>
      </rect>
     </property>
     <property name="text">
      <string>View table name</string>
     </property>
+    <property name="autoDefault">
+     <bool>false</bool>
+    </property>
+    <property name="default">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="view_table_0">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>210</y>
+      <x>320</x>
+      <y>230</y>
       <width>112</width>
       <height>32</height>
      </rect>
@@ -173,17 +175,17 @@
    <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>210</x>
       <y>60</y>
-      <width>270</width>
-      <height>180</height>
+      <width>350</width>
+      <height>161</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="stop_preprocess">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>160</x>
       <y>280</y>
       <width>130</width>
       <height>32</height>
@@ -196,21 +198,8 @@
    <widget class="QPushButton" name="stop_compare">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>160</x>
       <y>340</y>
-      <width>130</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Stop</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="stop_mapping">
-    <property name="geometry">
-     <rect>
-      <x>150</x>
-      <y>400</y>
       <width>130</width>
       <height>32</height>
      </rect>
@@ -222,7 +211,7 @@
    <widget class="QPushButton" name="save_1">
     <property name="geometry">
      <rect>
-      <x>610</x>
+      <x>620</x>
       <y>280</y>
       <width>112</width>
       <height>32</height>
@@ -235,7 +224,7 @@
    <widget class="QPushButton" name="save_2">
     <property name="geometry">
      <rect>
-      <x>610</x>
+      <x>620</x>
       <y>340</y>
       <width>112</width>
       <height>32</height>
@@ -248,8 +237,8 @@
    <widget class="QPushButton" name="save_0">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>210</y>
+      <x>430</x>
+      <y>230</y>
       <width>112</width>
       <height>32</height>
      </rect>
@@ -261,8 +250,47 @@
    <widget class="QPushButton" name="save_3">
     <property name="geometry">
      <rect>
-      <x>610</x>
+      <x>620</x>
       <y>400</y>
+      <width>112</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="mapping_table">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>460</y>
+      <width>130</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Mapping table</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="view_table_4">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>460</y>
+      <width>112</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>View table </string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="save_4">
+    <property name="geometry">
+     <rect>
+      <x>620</x>
+      <y>460</y>
       <width>112</width>
       <height>32</height>
      </rect>
@@ -277,7 +305,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>750</width>
+     <width>780</width>
      <height>24</height>
     </rect>
    </property>
