--- a/src/gui/form/scrapingWindow.ui
+++ b/src/gui/form/scrapingWindow.ui
@@ -29,7 +29,7 @@
      </font>
     </property>
     <property name="text">
-     <string>accept</string>
+     <string>Accept</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="skincare">
@@ -184,13 +184,13 @@
      <string>마스크/팩</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="start">
+   <widget class="QPushButton" name="run">
     <property name="geometry">
      <rect>
       <x>25</x>
       <y>300</y>
       <width>100</width>
-      <height>35</height>
+      <height>32</height>
      </rect>
     </property>
     <property name="font">
@@ -199,7 +199,7 @@
      </font>
     </property>
     <property name="text">
-     <string>start</string>
+     <string>Run</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
@@ -250,7 +250,13 @@
      </rect>
     </property>
     <property name="value">
-     <number>24</number>
+     <number>0</number>
+    </property>
+    <property name="invertedAppearance">
+     <bool>false</bool>
+    </property>
+    <property name="textDirection">
+     <enum>QProgressBar::TopToBottom</enum>
     </property>
    </widget>
    <widget class="QLCDNumber" name="brand_count">
@@ -258,7 +264,7 @@
      <rect>
       <x>400</x>
       <y>40</y>
-      <width>70</width>
+      <width>75</width>
       <height>25</height>
      </rect>
     </property>
@@ -283,12 +289,30 @@
      <rect>
       <x>400</x>
       <y>90</y>
-      <width>70</width>
+      <width>75</width>
       <height>25</height>
      </rect>
     </property>
     <property name="segmentStyle">
      <enum>QLCDNumber::Flat</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pause">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>300</y>
+      <width>100</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>13</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Pause</string>
     </property>
    </widget>
   </widget>
