--- a/src/gui/form/mappingWindow.ui
+++ b/src/gui/form/mappingWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>780</width>
-    <height>560</height>
+    <width>750</width>
+    <height>540</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <widget class="QPushButton" name="mapping">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>120</x>
       <y>400</y>
-      <width>130</width>
+      <width>112</width>
       <height>32</height>
      </rect>
     </property>
@@ -30,9 +30,9 @@
    <widget class="QPushButton" name="view_table_2">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>450</x>
       <y>340</y>
-      <width>112</width>
+      <width>90</width>
       <height>32</height>
      </rect>
     </property>
@@ -43,9 +43,9 @@
    <widget class="QPushButton" name="view_table_1">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>450</x>
       <y>280</y>
-      <width>112</width>
+      <width>90</width>
       <height>32</height>
      </rect>
     </property>
@@ -56,7 +56,7 @@
    <widget class="QProgressBar" name="pbar_0">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>240</x>
       <y>272</y>
       <width>200</width>
       <height>50</height>
@@ -69,9 +69,9 @@
    <widget class="QPushButton" name="compare">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>120</x>
       <y>340</y>
-      <width>130</width>
+      <width>112</width>
       <height>32</height>
      </rect>
     </property>
@@ -82,9 +82,9 @@
    <widget class="QPushButton" name="view_table_3">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>240</x>
       <y>400</y>
-      <width>112</width>
+      <width>90</width>
       <height>32</height>
      </rect>
     </property>
@@ -95,7 +95,7 @@
    <widget class="QProgressBar" name="pbar_1">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>240</x>
       <y>332</y>
       <width>200</width>
       <height>50</height>
@@ -114,9 +114,9 @@
    <widget class="QPushButton" name="preprocess">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>120</x>
       <y>280</y>
-      <width>130</width>
+      <width>112</width>
       <height>32</height>
      </rect>
     </property>
@@ -127,9 +127,9 @@
    <widget class="QPushButton" name="Import">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>300</x>
       <y>220</y>
-      <width>112</width>
+      <width>90</width>
       <height>32</height>
      </rect>
     </property>
@@ -140,9 +140,9 @@
    <widget class="QPushButton" name="view_table_0">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>390</x>
       <y>220</y>
-      <width>112</width>
+      <width>90</width>
       <height>32</height>
      </rect>
     </property>
@@ -150,38 +150,12 @@
      <string>View</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="stop_preprocess">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>280</y>
-      <width>130</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Stop</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="stop_compare">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>340</y>
-      <width>130</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Stop</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="save_1">
     <property name="geometry">
      <rect>
-      <x>620</x>
+      <x>540</x>
       <y>280</y>
-      <width>112</width>
+      <width>90</width>
       <height>32</height>
      </rect>
     </property>
@@ -192,9 +166,9 @@
    <widget class="QPushButton" name="save_2">
     <property name="geometry">
      <rect>
-      <x>620</x>
+      <x>540</x>
       <y>340</y>
-      <width>112</width>
+      <width>90</width>
       <height>32</height>
      </rect>
     </property>
@@ -205,9 +179,9 @@
    <widget class="QPushButton" name="save_0">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>480</x>
       <y>220</y>
-      <width>112</width>
+      <width>90</width>
       <height>32</height>
      </rect>
     </property>
@@ -218,9 +192,9 @@
    <widget class="QPushButton" name="save_3">
     <property name="geometry">
      <rect>
-      <x>620</x>
+      <x>330</x>
       <y>400</y>
-      <width>112</width>
+      <width>90</width>
       <height>32</height>
      </rect>
     </property>
@@ -228,113 +202,23 @@
      <string>Save</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="mapping_table">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>460</y>
-      <width>130</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Mapping table</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="view_table_4">
+   <widget class="QPushButton" name="update">
     <property name="geometry">
      <rect>
       <x>510</x>
-      <y>460</y>
-      <width>112</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>View</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="save_4">
-    <property name="geometry">
-     <rect>
-      <x>620</x>
-      <y>460</y>
-      <width>112</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Save</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="stop_mapping">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
       <y>400</y>
-      <width>130</width>
+      <width>90</width>
       <height>32</height>
      </rect>
     </property>
     <property name="text">
-     <string>Stop</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="stop_mapping_table">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>460</y>
-      <width>130</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Stop</string>
-    </property>
-   </widget>
-   <widget class="QProgressBar" name="pbar_2">
-    <property name="geometry">
-     <rect>
-      <x>300</x>
-      <y>390</y>
-      <width>200</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="value">
-     <number>0</number>
-    </property>
-    <property name="textVisible">
-     <bool>true</bool>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QProgressBar" name="pbar_3">
-    <property name="geometry">
-     <rect>
-      <x>300</x>
-      <y>450</y>
-      <width>200</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="value">
-     <number>0</number>
-    </property>
-    <property name="textVisible">
-     <bool>true</bool>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
+     <string>Update</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>205</x>
+      <x>190</x>
       <y>15</y>
       <width>85</width>
       <height>32</height>
@@ -353,11 +237,24 @@
    <widget class="QListWidget" name="TableList">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>185</x>
       <y>50</y>
       <width>380</width>
       <height>160</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="status">
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>400</y>
+      <width>90</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Status</string>
     </property>
    </widget>
   </widget>
@@ -366,7 +263,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>780</width>
+     <width>750</width>
      <height>24</height>
     </rect>
    </property>
