--- a/src/gui/form/scrapingWindow.ui
+++ b/src/gui/form/scrapingWindow.ui
@@ -29,7 +29,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Accept</string>
+     <string>Select</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="skincare">
@@ -396,7 +396,7 @@
      <x>0</x>
      <y>0</y>
      <width>656</width>
-     <height>24</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
