--- a/src/gui/form/crawlingGlInfoRevWindow.ui
+++ b/src/gui/form/crawlingGlInfoRevWindow.ui
@@ -17,7 +17,7 @@
    <widget class="QPushButton" name="Select">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>160</x>
       <y>260</y>
       <width>113</width>
       <height>32</height>
@@ -373,10 +373,10 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>59</y>
-      <width>121</width>
-      <height>21</height>
+      <x>330</x>
+      <y>50</y>
+      <width>98</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -386,10 +386,10 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>40</x>
+      <x>50</x>
       <y>360</y>
-      <width>151</width>
-      <height>31</height>
+      <width>161</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="whatsThis">
@@ -397,6 +397,19 @@
     </property>
     <property name="text">
      <string>신규 상품 개체,  리뷰 수집</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkBox">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>260</y>
+      <width>91</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>All Product</string>
     </property>
    </widget>
   </widget>
