--- a/src/gui/form/crawlingNvStatus.ui
+++ b/src/gui/form/crawlingNvStatus.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>706</width>
-    <height>483</height>
+    <height>466</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -221,7 +221,7 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>360</y>
+      <y>340</y>
       <width>113</width>
       <height>32</height>
      </rect>
@@ -234,8 +234,8 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>410</y>
-      <width>631</width>
+      <y>390</y>
+      <width>621</width>
       <height>23</height>
      </rect>
     </property>
@@ -247,7 +247,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>360</y>
+      <y>340</y>
       <width>113</width>
       <height>32</height>
      </rect>
@@ -260,7 +260,7 @@
     <property name="geometry">
      <rect>
       <x>420</x>
-      <y>360</y>
+      <y>340</y>
       <width>113</width>
       <height>32</height>
      </rect>
@@ -273,7 +273,7 @@
     <property name="geometry">
      <rect>
       <x>170</x>
-      <y>360</y>
+      <y>340</y>
       <width>113</width>
       <height>32</height>
      </rect>
@@ -282,50 +282,69 @@
      <string>Pause</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QPushButton" name="Upload">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>200</y>
-      <width>91</width>
-      <height>21</height>
+      <x>550</x>
+      <y>340</y>
+      <width>113</width>
+      <height>32</height>
      </rect>
     </property>
     <property name="text">
-     <string> 예상 소요 시간:</string>
+     <string>Upload</string>
     </property>
    </widget>
    <widget class="QLCDNumber" name="Products">
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>450</x>
       <y>140</y>
-      <width>64</width>
-      <height>23</height>
+      <width>75</width>
+      <height>25</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>400</x>
-      <y>140</y>
-      <width>51</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>상품 수:</string>
+    <property name="segmentStyle">
+     <enum>QLCDNumber::Flat</enum>
     </property>
    </widget>
    <widget class="QLCDNumber" name="Time">
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>450</x>
       <y>200</y>
-      <width>64</width>
-      <height>23</height>
+      <width>75</width>
+      <height>25</height>
      </rect>
+    </property>
+    <property name="segmentStyle">
+     <enum>QLCDNumber::Flat</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>200</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>예상 소요 시간:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>140</y>
+      <width>131</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>업데이트 상품 수:</string>
     </property>
    </widget>
   </widget>
