--- a/src/gui/form/mappingWindow.ui
+++ b/src/gui/form/mappingWindow.ui
@@ -163,7 +163,7 @@
      <string>Save</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="update">
+   <widget class="QPushButton" name="Upload">
     <property name="geometry">
      <rect>
       <x>520</x>
